added literature to #Discussion

--- a/ms/invasibility-ms.Rmd
+++ b/ms/invasibility-ms.Rmd
@@ -271,10 +271,11 @@ The interaction specified between seed deposition and plantation age was estimat
 
 ## Ecosystem invasibility
 
-1. Compare results to other assessments conifer recruitment in different ecosystems [@richardsonPineInvasionsSouthern1994; @petersonEcologyManagementSitka1997; @fernandesNaturalRegenerationPinus2016; @macekLifeDeathPicea2017; @vanettenInvasionPatternsPinus2020] or to plants more broadly [@chytryHabitatInvasionsAlien2008; @calvino-cancelaInvasivePotentialEucalyptus2013].
-Two obvious management recommendations: 1) for site selection, try to limit plantations to sites where they are surrounded by arable fields. Where it is simultanueosly desireable to alter adjacent nature types (e.g. by grazing), that is also an option. 2) For early detection and rapid response, prioritize monitoring and control interventions in vulnerable ecosystem types like... 5500 km2 mapped for ecosystem types in Norway.
+1. Compare results to other assessments conifer recruitment in different ecosystems [@richardsonPineInvasionsSouthern1994; @petersonEcologyManagementSitka1997; @despainDispersalEcologyLodgepole2001; @langdonPinusContortaInvasion2010; @fernandesNaturalRegenerationPinus2016; @taylorDriversPlantInvasion2016; @macekLifeDeathPicea2017; @vanettenInvasionPatternsPinus2020] or to plants more broadly [@chytryHabitatInvasionsAlien2008; @calvino-cancelaInvasivePotentialEucalyptus2013].
+Two obvious management recommendations: 1) for site selection, try to limit plantations to sites where they are surrounded by arable fields. Where it is simultanueosly desireable to alter adjacent nature types (e.g. by grazing), that is also an option. 2) For early detection and rapid response, prioritize monitoring and control interventions in vulnerable ecosystem types like... 5500 km2 mapped for ecosystem types in Norway. Ensuring that plantation surroundings are actively cultivated (e.g. mowed) is an effective way to keep wildlings in check, to the extent that seeds are unlikely to disperse beyond these ecosystem types [@albertLanduseChangeSubalpine2008].
 
-Caution: Beware that Sitka colonization varies enormously from site to site --- much more than other species --- so our ability to predict the magnitude of spread at a specific site is limited. More research is needed to probe this unexplained variance (human action?). But that does not mean we cannot or should not use the estimates to guide management! For example, imagine one locality consists entirely of coastal heath and another entirely of arable field. All things being equal, we expect the coastal heath locality to be colonized more than 100 times faster than the arable field locality. Simultaneusly we should not be surprised if they are colonized at equal rates.
+Caution: Beware that Sitka colonization varies enormously from site to site --- much more than other species --- so our ability to predict the magnitude of spread at a specific site is limited. More research is needed to probe this unexplained variance (human action?). But that does not mean we cannot or should not use the estimates to guide management! For example, imagine one locality consists entirely of coastal heath and another entirely of arable field. All things being equal, we expect the coastal heath locality to be colonized more than 100 times faster than the arable field locality. Simultaneusly we should not be surprised if they are colonized at equal rates. 
+Possible there are demographic differences between sites for unknown reasons [@taylorDriversPlantInvasion2016]. Shows the continued need for monitoring.
 
 Limitation: inland versus coastal P.contorta sites. Number of wildlings, climate...
 It is useful to consider at what spatial scale variability in natural recruitment occurs. This may differ between species. If most variation occurs at the coarsest spatial scale, drivers that also vary at course scales, such as climate, are likely to be comparatively important. If variation between plantations is greater than variation between regions, climate and other coarse-scale factors are probably less important, and drivers that vary at the plantation scale are likely important. If more variation occurs around single plantations than between plantations, site characteristics (e.g. surrounding ecosystem types) are likely the most important governing factors. With only six sites in two distinct groups, differences attributed to climate may have arisen by other mechanisms. Climate may have masked correlated drivers (e.g. sytematic differences in ecosystem composition) 
@@ -320,7 +321,7 @@ That said, the total wildling density of the species in our sample is congruent 
 
 Advantage: observational study (registering established individuals rather than doing seeding plots) is that seeds experience only natural conditions, and it measures long-term survival --- the quantity of interest for management. For practical reasons, seeding studies observe only the youngest life-stages, and the factors controlling individual success likely differ at later life-stages [@dovciakSeedRainEnvironmental2008]. Therefore, their results are not directly applicable to spread on the longer time-scales of interest to managers.
 
-Limitation: spatial grain. Minimum polygon area NiN, wildling group locations. A good reason to use relatively course observation units (100 m2) and to perform fuzzy coding of ecosystem types. Did our best to represent ecotones in the models and not use polygon boundaries overconfidently.
+Limitation: spatial grain. Minimum polygon area NiN, wildling group locations. A good reason to use relatively course observation units (100 m2) and to perform fuzzy coding of ecosystem types. Did our best to represent ecotones in the models and not use polygon boundaries overconfidently. Microsites! (although not a limitation considering applicability to management)
 
 Limitation: wildling establishment varies not only in number and distance but also in growth rate across ecosystem types. Abundant but slow colonization may be of lesser concern than sparse but fast colonization, depending on management objectives.
 
